--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r ./dotenv.js ./index.js",
-    "lint": "./node_modules/.bin/eslint index.js ./spec/*.js ./api/*.js ./routes/*.js ./helpers/*.js",
-    "test": "jest --coverage"
+    "lint": "./node_modules/.bin/eslint .",
+    "test": "jest --setupFiles dotenv/config --coverage",
+    "coverage": "npm test"
   },
   "engines": {
     "node": ">=10"
@@ -31,10 +32,10 @@
     "node-geocoder": "^3.23.0"
   },
   "devDependencies": {
-    "cross-env": "^6.0.0",
-    "eslint": "^6.0.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jest": "^23.0.2",
-    "jest": "^24.8.0"
+    "jest": "^26.1.0"
   }
 }
